--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/typography": "^0.5.10",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.33",
+        "tailwindcss": "^3.4.1",
         "vite": "^4.0.0"
     }
 }
